devops/k8s/test_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
    nginx.ingress.kubernetes.io/force-ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
  - http:
      paths:
      - path: /test(/|$)(.*)
        backend:
          serviceName: test-dep
          servicePort: 80
